# deckfm

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  deckfm.sh  deckfm_update_and_run  docker-compose.yml  input.vdf  main.cpp  qml.qrc  steam_controller.vdf  update_branch_dev
.github/workflows/: build.yml  update_image.yml
holo-dev/: Dockerfile
qml/: Gamepad.qml  GamepadInput.qml  Header.qml  MainWindow.qml  main.qml
qml/DirectoryView/: DirectoryModel.qml  DirectoryView.qml  FileDelegate.qml  FilePathView.qml
qml/MDI/: Icon.qml  MenuItem.qml
resources/js/: vdf.js
resources/qml/: ActionLabel.qml  AppLoader.qml  AsyncImage.qml  DebugOverlay.qml  FPSCounter.qml  Footer.qml  Gamepad.qml  GamepadWindow.qml  GlobalMenu.qml  Header.qml  LoaderWindow.qml  MainWindow.js  MainWindow.qml  NavigationDrawer.qml  Spoiler.qml  SteamInputScrollableGridView.qml
resources/qml/Apps/: FileManager.qml  Games.qml
resources/qml/Browser/: Browser.qml
resources/qml/Components/: ActionLabel.qml  MDIButton.qml  MDIIcon.qml  MDIMenuItem.qml  Spoiler.qml  TabView.qml  (+2 more)
spoiler/: Spoiler.qml  demo.qml
src/: abstractcache.cpp  abstractcache.h  application.cpp  application.h  cachednetworkaccessmanager.cpp  cachednetworkaccessmanager.h  cachethumbnailimageprovider.cpp  cachethumbnailimageprovider.h  diskcache.cpp  diskcache.h  folderlistmodel.cpp  folderlistmodel.h  fsbridge.cpp  fsbridge.h  fshelpers.cpp  fshelpers.h  gamepadbridge.cpp  gamepadbridge.h  main.cpp  steamapibridge.cpp  steamapibridge.h  steamgamesmodel.cpp  steamgamesmodel.h  steaminputbridge.cpp  steaminputbridge.h  steamutilsbridge.cpp  steamutilsbridge.h
src/QSteamworks/: action.cpp  action.h  actiondefinition.cpp  actiondefinition.h  actionset.cpp  actionset.h  actionsetdefinition.cpp  actionsetdefinition.h  actionsetlayer.cpp  actionsetlayer.h  actionsetlayerdefinition.cpp  actionsetlayerdefinition.h  collections.h  controller.cpp  controller.h  errors.h  iga.cpp  iga.h  inputevent.cpp  inputevent.h  qsteamapi.cpp  qsteamapi.h  qsteaminput.cpp  qsteaminput.h  qsteamutils.cpp  qsteamutils.h  steamapi.cpp  steamapi.h  steaminput.cpp  steaminput.h  steamutils.cpp  steamutils.h  vdfparser.h
tools/vdf/: CMakeLists.txt  main.cpp  vdf.js
(+96 files in other folders)
